<resources>
    <string name="app_name" translatable="false">MediNote</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="Enter_NIN">Enter students NIN:</string>
    <string name="serve_to">Serve to</string>
    <string name="health_facility">Health facility</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="needs">Needs</string>
    <string name="doctor">Doctor</string>
    <string name="date">Date</string>
    <string name="create">Create</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_note">Create note</string>
    <string name="check_note">Check note</string>
    <string name="register">Register</string>
    <string name="enter_student_s_nin">Enter student\'s NIN</string>
    <string name="check">Check</string>
    <string name="doctor_s_name">Doctor\'s name</string>
    <string name="uin">UIN</string>
    <string name="email">Email</string>
    <string name="position">Position</string>
    <string name="logo">Logo</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_here">Register here</string>
    <string name="next">Next</string>
    <string name="medicine_sister">Medicine Sister</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="registration_type">Registration type</string>
    <string name="school">School</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="medicine_sister_registration">Medicine sister registration</string>
    <string name="teacher_registration">Teacher registration</string>
    <string name="teacher_s_class">Teacher\'s class</string>
    <string name="student_registration">Student registration</string>
    <string name="first_name_and_last_name">First name and last name</string>
    <string name="student_class">Class</string>
    <string name="teacher_student">Teacher</string>
    <string name="create_note1">Create note</string>
    <string name="student_s_first_and_last_name">Student\'s first and last name</string>
    <string name="note">Note</string>
    <string name="prescription">Prescription</string>
    <string name="from_doctor_s_name">From (Doctor\'s name)</string>
    <string name="drug">Drug</string>
    <string name="medical_certificate">Medical certificate</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="created_on">Created on (date)</string>
    <string name="clinically_healthy">Clinically healthy</string>
    <string name="medical_check">Medical check</string>
    <string name="height">Height</string>
    <string name="tour_body">Tour of the body</string>
    <string name="weight">Weight</string>
    <string name="doc_reg">Doctor registration</string>
    <string name="password_reg">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="token_type" translatable="false">tokenType</string>
    <string name="access_token" translatable="false">accessToken</string>

    <string name="egn">EGN</string>
    <string name="title_activity_navigation" translatable="false">Navigation</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings" translatable="false">Settings</string>
    <string name="options">Options</string>
    <string name="contact_us">Contact Us</string>
    <string name="information">Information</string>
    <string name="home">Home</string>
    <string name="logout">Log Out</string>
    <string name="subject">Subject</string>
    <string name="enter_title">Enter the title</string>
    <string name="write_email">Write your email</string>
    <string name="send">Send</string>
    <string name="about_app">About application</string>
    <string name="about_us">About Us</string>
    <string name="about_us_description">Name: Martin Dachev\nBack-End developer\nEmail: martin.dachev98@gmail.com\n\n\nName: Dimitar Velichkov\nUI developer\nEmail:dimiter41@gmail.com</string>
    <string name="about_app_description">MediNote is application where doctors can create notes for the students, medical certificates and medical checks. Once they are created, the students can see them from their profiles.</string>
    <string name="token_file_name" translatable="false">MediNoteAuthorization</string>
    <string name="register_student">Register student</string>
    <string name="age">Age</string>
    <string name="phone_number">Phone number</string>
    <string name="register_doctor">Register doctor</string>
    <string name="check_medicalnote_by_men">Check Medical Note by MEN</string>
    <string name="create_medical_note">Create medical note</string>
    <string name="enter_medical_note_men">Мedical examination number</string>
    <string name="diagnose">Diagnose</string>
    <string name="MEN">Medical Examination Number (MEN)</string>
    <string name="nin">NIN</string>
    <string name="made_by">Doctor:</string>
    <string name="valid">Valid from/to:</string>
    <string name="serve_to1">Serve to:</string>
    <string name="details">Note details</string>
    <string name="doctors_nin">Doctor\'s NIN</string>
    <string name="students_nin">Student\'s NIN</string>
    <string name="student_registered_successfully">Student registered successfully</string>
    <string name="doctor_registered_successfully">Doctor registered successfully</string>
    <string name="medical_note_added_successfully">Medical note added successfully</string>
    <string name="field_cannot_be_empty">This field cannot be empty</string>
    <string name="nin_requirements">NIN must be exactly 10 characters, numeric only</string>
    <string name="name_requirements">First and Last name should consist only of letters, space, (\'), (.) and (,)</string>
    <string name="age_requirements">Are you sure you are that old?</string>
    <string name="address_requirements">Address should consist only of letters, numbers, space, (\'), (.) and (,)</string>



    <!-- Web error messages -->
    <string name="doctor_already_exists_with_nin">Doctor already exists with this NIN</string>
    <string name="student_already_exists_with_nin">Student already exists with this NIN</string>
    <string name="account_already_exists_with_nin">Account already exists with this NIN</string>
    <string name="medical_note_already_exists_with_this_men">Medical note already exists with this Medical Examination Number (MEN)</string>
    <string name="medical_note_not_found_with_this_men">Medical note not found with this Medical Examination Number (MEN)</string>
    <string name="problem_when_communicating_with_server">There was a problem when communicating with the server</string>


    <string name="uin_requirements">UIN must be exactly 6 characters, numeric only</string>
    <string name="position_requirements">Position should consist only of letters, space, (\'), (.) и (,)</string>
    <string name="healthcare_facility_name_requirements">Healthcare facility name should consist only of letters, numbers, space, (\'), (.) and (,)</string>
    <string name="men_requirements">MEN must be exactly 6 characters, numeric only</string>
    <string name="diagnose_requirements">Diagnose should consist only of letters, numbers, space, (\'), (.) and (,)</string>
    <string name="needs_requirements">Needs should consist only of letters, numbers, space, (\'), (.) and (,)</string>
    <string name="serve_to_requirements">Serve To should consist only of letters, numbers, space, (\'), (.) and (,)</string>
    <string name="date_requirements">Date should be in one of the following formats: <b>dd/mm/yyyy</b>, <b>dd.mm.yyyy</b>, or <b>dd-mm-yyyy</b></string>
    <string name="email_not_valid">Email is not valid</string>
    <string name="phone_not_valid">Phone is not valid</string>
    <string name="password_min_length_requirement">Password should be minimum 6 characters long</string>
    <string name="passwords_do_not_match">Passwords does not match</string>

    <string name="invalid_username_and_or_password">Invalid username and/or password</string>

</resources>
