<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/register_form2">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

        <ImageView
            android:layout_width="220dp"
            android:layout_height="100dp"
            android:background="@mipmap/transparent_back"
            android:layout_marginTop="65dp"
            android:id="@+id/medinote_logo"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/medinote_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:textSize="22sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/doc_reg" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyEditTextTheme"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/hintTextColor"
            android:inputType="textPersonName"
            android:hint="@string/first_name_and_last_name"
            android:layout_below="@id/textView11"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textAlignment="center"
            android:id="@+id/editTextDoctorName" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyEditTextTheme"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/hintTextColor"
            android:inputType="textPassword"
            android:hint="@string/password_reg"
            android:layout_below="@id/editTextDoctorName"
            android:layout_marginTop="13dp"
            android:ems="10"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textAlignment="center"
            android:id="@+id/editTextDoctorPassword" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyEditTextTheme"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/hintTextColor"
            android:inputType="textPassword"
            android:hint="@string/repeat_password"
            android:layout_below="@id/editTextDoctorPassword"
            android:layout_marginTop="13dp"
            android:ems="10"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textAlignment="center"
            android:id="@+id/editTextDoctorPasswordRepeat" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyEditTextTheme"
            android:textColorHint="@color/hintTextColor"
            android:textColor="@color/colorPrimaryDark"
            android:inputType="number"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:layout_marginTop="15dp"
            android:hint="@string/nin"
            android:textAlignment="center"
            android:layout_below="@+id/editTextDoctorPasswordRepeat"
            android:id="@+id/editTextDoctorNIN" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyEditTextTheme"
            android:textColorHint="@color/hintTextColor"
            android:textColor="@color/colorPrimaryDark"
            android:inputType="number"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:layout_marginTop="15dp"
            android:hint="@string/uin"
            android:textAlignment="center"
            android:layout_below="@+id/editTextDoctorNIN"
            android:id="@+id/editTextUIN" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyEditTextTheme"
            android:textColorHint="@color/hintTextColor"
            android:textColor="@color/colorPrimaryDark"
            android:inputType="textPersonName"
            android:hint="@string/health_facility"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:layout_below="@+id/editTextUIN"
            android:id="@+id/editTextHealthFacilityRegister" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyEditTextTheme"
            android:textColorHint="@color/hintTextColor"
            android:textColor="@color/colorPrimaryDark"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/email"
            android:textAlignment="center"
            android:layout_marginLeft="20dp"
            android:layout_below="@+id/editTextHealthFacilityRegister"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:id="@+id/editTextEmail" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyEditTextTheme"
            android:textColorHint="@color/hintTextColor"
            android:inputType="textPersonName"
            android:ems="10"
            android:textColor="@color/colorPrimaryDark"
            android:hint="@string/position"
            android:textAlignment="center"
            android:layout_marginLeft="20dp"
            android:layout_below="@+id/editTextEmail"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:id="@+id/editTextPosition" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyEditTextTheme"
            android:textColorHint="@color/hintTextColor"
            android:inputType="phone"
            android:ems="10"
            android:textColor="@color/colorPrimaryDark"
            android:hint="@string/phone_number"
            android:textAlignment="center"
            android:layout_marginLeft="20dp"
            android:layout_below="@+id/editTextPosition"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:id="@+id/editTextPhoneNumber" />

        <Button
            android:text="@string/register"
            android:background="#1C9FB5"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextPhoneNumber"
            android:id="@+id/buttonRegisterDoctor"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="30dp"/>



    </RelativeLayout>



</ScrollView>

</RelativeLayout>