<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/register_form2"
    tools:context="layout.StudentRegistrationFragment">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="220dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="65dp"
            android:background="@mipmap/medinote_logo"
            android:contentDescription="@string/logo" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/MyEditTextTheme"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/hintTextColor"
            android:inputType="textPersonName"
            android:hint="@string/first_name_and_last_name"
            android:layout_below="@+id/textViewStudentReg"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textAlignment="center"
            android:id="@+id/editTextStudentName" />

        <EditText
            android:id="@+id/editTextStudentAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextStudentName"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="13dp"
            android:ems="10"
            android:hint="@string/age"
            android:inputType="textPassword|number"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/hintTextColor"
            android:theme="@style/MyEditTextTheme" />

        <EditText
            android:id="@+id/editTextStudentAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextStudentAge"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="13dp"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/hintTextColor"
            android:theme="@style/MyEditTextTheme" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextStudentAddress"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="13dp"
            android:ems="10"
            android:hint="@string/egn"
            android:inputType="text|number"
            android:maxLength="10"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/hintTextColor"
            android:theme="@style/MyEditTextTheme"
            android:id="@+id/editTextStudentNIN" />

        <Button
            android:text="@string/register"
            android:background="#1C9FB5"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonRegisterStudent"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/editTextStudentNIN"
            android:layout_marginTop="15dp"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="30dp"
            android:textSize="16sp"
            android:layout_marginEnd="25dp" />


        <TextView
            android:id="@+id/textViewStudentReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageViewLogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="64dp"
            android:textSize="22sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/student_registration" />


    </RelativeLayout>
</ScrollView>

</RelativeLayout>
