<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".fragments.ContactUsFragment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView3"
        android:background="#FFFFFF"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/subject"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/textViewSubject" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextTitle"
                android:inputType="text"
                android:textSize="16sp"
                android:layout_below="@+id/textViewSubject"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edittext_border"
                android:hint="@string/enter_title"
                android:textColorHint="@color/colorPrimary"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="20sp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/email"
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/editTextContentMail"
                android:layout_below="@+id/editTextTitle"
                android:layout_alignStart="@+id/editTextTitle"
                android:layout_marginTop="20dp"
                android:layout_alignRight="@+id/editTextContent"
                android:layout_alignEnd="@+id/editTextContent" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:inputType="textMultiLine"
                android:ems="10"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:id="@+id/editTextContent"
                android:layout_below="@+id/editTextContentMail"
                android:layout_marginTop="10dp"
                android:layout_alignEnd="@+id/editTextTitle"
                android:layout_marginStart="20dp"
                android:background="@drawable/edittext_border"
                android:textColorHint="@color/colorPrimary"
                android:hint="@string/write_email"
                android:gravity="top" />

            <Button
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/send"
                android:id="@+id/buttonSend"
                android:background="@drawable/button_border"
                android:textColor="@color/colorPrimaryDark"
                android:layout_below="@+id/editTextContent"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp" />

        </RelativeLayout>


    </ScrollView>

</FrameLayout>
